# Pengu_Wave_Project

./: .gitignore  PLAN.md  README.md  THREAT_MODEL.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  deps.py  logging_config.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routers/: auth.py  events.py  users.py
backend/penguwave_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_events.py  test_users.py
docs/: api_contract.md
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: auth.ts  client.ts  events.ts  users.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  RequireRole.tsx
frontend/src/components/: LoginModal.tsx  Navbar.tsx  WelcomeBanner.tsx
frontend/src/pages/: EventsPage.tsx  UsersPage.tsx
